把生产逻辑全部放到producer

--- a/invisible_zhihu/data/log.ini
+++ b/invisible_zhihu/data/log.ini
@@ -1,34 +1,34 @@
 [loggers]
-keys=root, process
+keys=root, process, dispatch
 
 [handlers]
-keys=consoleHandler
+keys=console
 
 [formatters]
-keys=simpleFormatter
+keys=simple
 
 [logger_root]
 level=WARNING
-handlers=consoleHandler
+handlers=console
 
 [logger_process]
 level=DEBUG
-handlers=consoleHandler
+handlers=console
 qualname=process
 propagate=0
 
 [logger_dispatch]
 level=DEBUG
-handlers=consoleHandler
+handlers=console
 qualname=dispatch
 propagate=0
 
-[handler_consoleHandler]
+[handler_console]
 class=StreamHandler
-level=DEBUG
-formatter=simpleFormatter
+level=INFO
+formatter=simple
 args=(sys.stdout,)
 
-[formatter_simpleFormatter]
+[formatter_simple]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
