--- a/data/log.ini
+++ b/data/log.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, process, dispatch
+keys=root, invisible_zhihu.process, invisible_zhihu.dispatch
 
 [handlers]
 keys=console
@@ -11,16 +11,16 @@ keys=simple
 level=WARNING
 handlers=console
 
-[logger_process]
+[logger_invisible_zhihu.process]
 level=DEBUG
 handlers=console
-qualname=process
+qualname=invisible_zhihu.process
 propagate=0
 
-[logger_dispatch]
+[logger_invisible_zhihu.dispatch]
 level=DEBUG
 handlers=console
-qualname=dispatch
+qualname=invisible_zhihu.dispatch
 propagate=0
 
 [handler_console]
@@ -30,5 +30,6 @@ formatter=simple
 args=(sys.stdout,)
 
 [formatter_simple]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+; format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(name)s - %(levelname)s - %(message)s
 datefmt=
