--- a/data/log.ini
+++ b/data/log.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, invisible_zhihu.process, invisible_zhihu.dispatch
+keys=root, invisible_zhihu.process, invisible_zhihu.dispatch, invisible_zhihu.produce
 
 [handlers]
 keys=console
@@ -21,6 +21,12 @@ propagate=0
 level=DEBUG
 handlers=console
 qualname=invisible_zhihu.dispatch
+propagate=0
+
+[logger_invisible_zhihu.produce]
+level=DEBUG
+handlers=console
+qualname=invisible_zhihu.produce
 propagate=0
 
 [handler_console]
